2015-03-30  Ben Elliston  <bje@gnu.org>

	Revert the following change which causes breakage reported here:
	https://lists.gnu.org/archive/html/dejagnu/2015-03/msg00003.html

	2011-03-14  Jan Kratochvil  <jan.kratochvil@redhat.com>

	* runtest.exp (runtest): Call reset_vars at initialisation so that
	perror does not affect test results in other test scripts.

2015-02-26  H.J. Lu  <hjl.tools@gmail.com>

	* lib/target.exp (default_target_compile): Prepend multilib_flags,
	instead of appending it.

2015-02-18  Ben Elliston  <bje@gnu.org>

	* lib/framework.exp (log_and_exit): Set tool to "testrun" if
	unset.

2015-02-05  Ben Elliston  <bje@gnu.org>

	* doc/runtest.1: Fix a spelling error.

2015-02-04  Ben Elliston  <bje@gnu.org>

	* config.guess: Update to version 2015-01-01.
	* config.sub: Likewise.

2015-01-22  Eric Botcazou  <ebotcazou@adacore.com>

	* Makefile.am (baseboard_DATA): Add baseboards/visium-sim.exp.
	* Makefile.in: Regenerate.
	* baseboards/visium-sim.exp: New file.

2014-11-25  Ben Elliston  <bje@gnu.org>

	* lib/dejagnu.exp (host_execute): Remove stray leading hyphen.
	Reported by David Malcolm.

2014-10-28  Ben Elliston  <bje@gnu.org>

	* Makefile.in: Regenerate.

2014-10-28  Ben Elliston  <bje@gnu.org>

	* example: Remove stale examples.

2014-10-24  Steve Ellcey  <sellcey@mips.com>

	* dejagnu.h (pass): Make function static as well as inline.
	(xpass): Ditto.
	(fail): Ditto.
	(xfail): Ditto.
	(untested): Ditto.
	(unresolved): Ditto.
	(note): Ditto.
	(totals): Ditto.

2014-10-14  Ben Elliston  <bje@gnu.org>

	* runtest.exp: Only match $directory, not *${directory}* when the
	user passes the --directory option. Reported by Sergey Alyoshin.

2014-10-14  Ben Elliston  <bje@gnu.org>

	* lib/dejagnu.exp (host_execute): Remove buffer_full check. This
	is not the right command keyword -- it is full_buffer. Reported by
	David Malcolm.

2014-07-15  Maciej W. Rozycki  <macro@mips.com>
	    Maciej W. Rozycki  <macro@codesourcery.com>
